added usage of connectionId API endpoint

--- a/.env.development
+++ b/.env.development
@@ -10,3 +10,4 @@ REACT_APP_takeCardsEndpoint=/takeCards
 REACT_APP_leaveGameEndpoint=/leaveGame
 REACT_APP_restartGameEndpoint=/restartGame
 REACT_APP_aliveEndpoint=/alive
+REACT_APP_getConnectionIdEndpoint=/connectionId
